@@ -2,12 +2,6 @@
 defined('BASEPATH') OR exit('No direct script access allowed');
 
 
-$config['menu_choices'] = array(
-    'menudata' => array(
-        array('name' => 'Stocks', 'link' => '/stocks'),
-        array('name' => 'Players', 'link' => '/player'),
-        )
-    );
 /*
 |--------------------------------------------------------------------------
 | Base Site URL
