@@ -77,7 +77,7 @@ $db['default'] = array(
 	'dsn'	=> '',
 	'hostname' => 'localhost',
 	'username' => 'root',
-	'password' => '',
+	'password' => 'squeal',
 	'database' => 'assignment',
 	'dbdriver' => 'mysqli',
 	'dbprefix' => '',
